--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "personal web projects",
   "main": "NodeHTML.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NodeHTML.js"
   },
   "repository": {
     "type": "git",
